@@ -2,7 +2,6 @@ package com;
 
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class StreamsTest {
     public static void main(String[] args) {
@@ -20,21 +19,23 @@ public class StreamsTest {
         employees.add(new Employee("FFF", 666, "D2", 6000));
 
         System.out.println(employees);
-        //TODO print employee names belongs to dept "D2" -  using streams functions
-        var x = employees.stream().filter(d -> d.getDeptno() != null && d.getDeptno().equals("D2")).collect(Collectors.toList());
+        // TODO print employee names belongs to dept "D2" - using streams functions
+        var x = employees.stream().filter(d -> d.getDeptno() != null && d.getDeptno().equals("D2")).toList();
         System.out.println(x);
 
-        //TODO Print the sum of all employees salaries using streams -  expected to print 21000
+        // TODO Print the sum of all employees salaries using streams - expected to
+        // print 21000
         var y = employees.stream().map(Employee::getSalary).reduce(0, Integer::sum);
         System.out.println(y);
 
-        //TODO Given a sentence find the word that has the highest length using Streams. expected to print "Welcome"
+        // TODO Given a sentence find the word that has the highest length using
+        // Streams. expected to print "Welcome"
         String input = " Welcome to Java world";
 
-
-        //TODO Should print most repeated number from the array, using streams or Java 7 features... 
+        // TODO Should print most repeated number from the array, using streams or Java
+        // 7 features...
         // number 5 repeated most of the (3)times, Should print 5 and not 3
-        int arr[] = {7, 5, 7, 5, 7, 5, 5};
+        int arr[] = { 7, 5, 7, 5, 7, 5, 5 };
 
         int mostRepeated = Arrays.stream(arr)
                 // Step 2: Count the occurrences of each element
@@ -47,7 +48,8 @@ public class StreamsTest {
                 // Step 4: Retrieve the most repeated element
                 .map(Map.Entry::getKey)
                 .orElseThrow(() -> new IllegalArgumentException("Array is empty"));
-        System.out.println(mostRepeated);
+
+        System.out.println("GGGGGGG "+mostRepeated);
 
         List<Integer> numbers = Arrays.asList(1, 2, 1, 3, 4, 4);
         Set<Integer> duplicated = numbers
@@ -59,9 +61,7 @@ public class StreamsTest {
                 .collect(Collectors.toSet());
         System.out.println(duplicated);
 
-
-
-        //Optional example
+        // Optional example
         if (employees == null) {
             throw new RuntimeException();
         } else {
